<resources>
    <string name="app_name">HistoryAR</string>
    <string name="title_home">Inicio</string>
    <string name="title_profile">Perfil</string>
    <string name="title_dashboard">Panel de administrador</string>
    <string name="title_login">Comienza el viaje</string>
    <string name="subtitle_login">Inicia sesión con tu cuenta de Google para comenzar a usar la aplicación</string>
    <string name="btn_login">Iniciar sesión</string>

    <!--Home-->
    <string name="home_no_geolocalization">No se pudo obtener la ubicación del usuario. Por favor, acepte los permisos y vuelva a intentar.</string>
    <string name="home_no_close_experiences">No hay experiencias cerca tuyo. Prueba viendo todas las experiencias que tenemos para ofrecer.</string>
    <string name="home_close_experiences">Experiencias cerca tuyo</string>
    <string name="home_btn_more_experiences">Ver todas las experiencias</string>
    <string name="home_no_previous_experiences">Todavía no realizaste ningun recorrido, ¿qué esperas para empezar 😉?</string>
    <string name="home_previous_experiences">Tus viajes por la historia</string>
    <string name="home_btn_sub">Suscribirme por $100 ARS</string>
    <string name="home_btn_support">Necesito ayuda</string>
    <string name="home_sub">No tenés una suscripción activa</string>

    <!--Profile-->
    <string name="profile_tour">Recorrido destacado</string>
    <string name="profile_preferences">Preferencias</string>
    <string name="profile_account">Cuenta</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="btn_delete_account">Dar de baja</string>

    <!--Tour detail-->
    <string name="tour_detail_comment_title">Comentarios y calificaciones</string>
    <string name="tour_detail_qualification_dialog_hint">Deja tu comentario acerca del recorrido</string>
    <string name="tour_detail_qualification_dialog_btn">Calificar</string>

    <!--Accesibility-->
    <string name="acc_account_image">Imagen del perfil</string>
    <string name="acc_comment_image">Imagen del perfil del autor del comentario</string>

    <!--Google Maps-->
    <string name="google_maps_key">AIzaSyDkQZKNSGt831GkyfCvNjHa5s7zKc8NONE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>